Spring changelog
(since 85.0 a "!" prefix indicates backward compatibility broke)
(numbers in brackets normally mean the mantis ticket ID)

-- 106.0 --------------------------------------------------------

Lua:
 - Add minx, maxy, maxx, miny = Spring.GetSelectionBox() returning coordinates
   for current selection box. Returns nil if no valid selection active.
 - Add Spring.GetKeyFromScanSymbol(scanSymbol) that receives a scancode and
   returns the users correspondent key in the current keyboard layout
 - allow empty argument for Spring.GetKeyBindings to return all keybindings
 - `firestarter` weapon tag no longer capped at 10000 in defs (which
   becomes 100 in Lua after rescale). Now uncapped.
 - add Spring.AddUnitExperience(unitID, delta_xp). Can subtract, but the result cannot be negative.
 - change widget, gadget and action handlers to support scancodes
 - Added Lua SyncedControl callins to modify the original/base heightmap (i.e. the values that the
   restore command will aim for.)
    - Spring.AdjustOriginalHeightMap
    - Spring.LevelOriginalHeightMap
    - Spring.RevertOriginalHeightMap
    - Spring.SetOriginalHeightMapFunc
    - Spring.AddOriginalHeightMap
    - Spring.SetOriginalHeightMap
 - Added Spring.GetRenderFeaturesDrawFlagChanged to report all features whose draw flags have
   changed since the last sim frame.
 - Added Spring.GetRenderUnitsDrawFlagChanged to report all units whose draw flags have changed
   since the last sim frame.
 - Added Spring.KeyMapChanged callin for when the user switches keyboard
   layouts, for example switching input method language.

Maps:
 - New bumpwater params, most of these were just hard-coded values:
    - waveOffsetFactor    (0.0)
		- waveLength          (0.15)
		- waveFoamDistortion  (0.05)
		- waveFoamIntensity   (0.5)
		- causticsResolution  (75.0)
		- causticsStrength    (0.08)

Map:
 - The original/base height map is now editable, so the height map as read from the map file is