@@ -19,6 +19,7 @@
 
 namespace KeyInput {
 	static       std::vector<Key> keyVec;
+	static       std::vector<Key> scanVec;
 	static const std::function<bool(const Key&, const Key&)> keyCmp = [](const Key& a, const Key& b) { return (a.first < b.first); };
 
 	static SDL_Keymod keyMods;
@@ -29,6 +30,24 @@ namespace KeyInput {
 		const auto  iter = std::lower_bound(keyVec.begin(), keyVec.end(), Key{keyCode, false}, pred);
 
 		return (iter != keyVec.end() && iter->first == keyCode && iter->second);
+	}
+
+	bool IsScanPressed(int scanCode) {
+		const auto& pred = keyCmp;
+		const auto  iter = std::lower_bound(scanVec.begin(), scanVec.end(), Key{scanCode, false}, pred);
+
+		return (iter != scanVec.end() && iter->first == scanCode && iter->second);
+	}
+
+	void SetScanPressed(int scanCode, bool isPressed) {
+		const auto& pred = keyCmp;
+		const auto  iter = std::lower_bound(scanVec.begin(), scanVec.end(), Key{scanCode, false}, pred);
+
+		// not reachable for default modifiers
+		if (iter == scanVec.end())
+			return;
+
+		iter->second = isPressed;
 	}
 
 	void SetKeyPressed(int keyCode, bool isPressed) {
@@ -57,7 +76,7 @@ namespace KeyInput {
 	/**
 	* Tests SDL keystates and sets values in key array
 	*/
-	void Update(int currKeycode, int fakeMetaKey)
+	void Update(int fakeMetaKey)
 	{
 		int numKeys = 0;
 		const uint8_t* kbState = SDL_GetKeyboardState(&numKeys);
@@ -66,26 +85,39 @@ namespace KeyInput {
 
 		keyVec.clear();
 		keyVec.reserve(numKeys);
+		scanVec.clear();
+		scanVec.reserve(numKeys);
 
 		for (int i = 0; i < numKeys; ++i) {
 			const auto scanCode = (SDL_Scancode)i;
 			const auto keyCode  = SDL_GetKeyFromScancode(scanCode);
 
 			keyVec.emplace_back(keyCode, kbState[scanCode] != 0);
+			scanVec.emplace_back(scanCode, kbState[scanCode] != 0);
 		}
 
 		std::sort(keyVec.begin(), keyVec.end(), keyCmp);
+		std::sort(scanVec.begin(), scanVec.end(), keyCmp);
 
 		SetKeyModState(KMOD_GUI, IsKeyPressed(fakeMetaKey));
 		SetKeyPressed(SDLK_LALT  , GetKeyModState(KMOD_ALT  ));
 		SetKeyPressed(SDLK_LCTRL , GetKeyModState(KMOD_CTRL ));
 		SetKeyPressed(SDLK_LGUI  , GetKeyModState(KMOD_GUI  ));
 		SetKeyPressed(SDLK_LSHIFT, GetKeyModState(KMOD_SHIFT));
+		SetKeyPressed(SDL_SCANCODE_LALT  , GetKeyModState(KMOD_ALT  ));
+		SetKeyPressed(SDL_SCANCODE_LCTRL , GetKeyModState(KMOD_CTRL ));
+		SetKeyPressed(SDL_SCANCODE_LGUI  , GetKeyModState(KMOD_GUI  ));
+		SetKeyPressed(SDL_SCANCODE_LSHIFT, GetKeyModState(KMOD_SHIFT));
 	}
 
 	const std::vector<Key>& GetPressedKeys()
 	{
 		return keyVec;
+	}
+
+	const std::vector<Key>& GetPressedScans()
+	{
+		return scanVec;
 	}
 
 	void ReleaseAllKeys()
